# stripepaymentservice

./: .gitignore  README.md  dev_pricing.json  dev_pricing_fixed.json  package-lock.json  package.json
easyerp/: README.md  pyproject.toml
easyerp/app/api/: routes.py  schemas.py
easyerp/app/core/: auth.py  config.py
easyerp/app/db/: client.py
easyerp/app/services/: replica_service.py
easyerp/docs/: odoo14-replica-mapping.md
easyerp/scripts/: extract_odoo_routes.py
scratch/: apply_fix_dev_pricing_ps.ts  check_coupon.ts  check_price_details.ts  check_qa_env.ts  check_qa_prices.ts  check_stripe_prices.ts  copy_prod_pricing_to_qa.ts  fetch_dev_pricing_ps.ts  fetch_qa_prices.ts  inspect_coupon_restrictions.ts  inspect_dev_pricing.ts  inspect_prod_pricing.ts  simulate_checkout.ts  test_promo_apply.ts
scripts/: seed-pricing-with-stripe.ts  seed-pricing.ts  verify-payment.ts
src/: app.ts  server.ts
src/config/: db.ts  env.ts  pricing.ts  stripe.ts
src/controllers/: admin.pricing.controller.ts  coupon.controller.ts  identity.controller.ts  payment.controller.ts  pricing.controller.ts  subscription.controller.ts  webhook.controller.ts
src/middlewares/: validate.ts
src/routes/: identity.routes.ts  payment.routes.ts  pricing.routes.ts  subscription.routes.ts  webhook.routes.ts
src/services/: admin.pricing.service.ts  coupon.service.ts  identity.service.ts  payment.service.ts  subscription.service.ts
src/utils/: logger.ts
