[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyerp-replica"
version = "0.1.0"
description = "Fast replica API layer for Odoo 14 ERP workloads"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
]

[tool.setuptools]
packages = ["app"]
